--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,6 @@
     }
   ],
   "routes": [
-    // Backend Routes - These map directly to your app.use() paths in backend/app.js
     { "src": "/login(.*)", "dest": "backend/server.js" },
     { "src": "/dashboard(.*)", "dest": "backend/server.js" },
     { "src": "/application-form(.*)", "dest": "backend/server.js" },
@@ -21,14 +20,13 @@
     { "src": "/messages(.*)", "dest": "backend/server.js" },
     { "src": "/payment(.*)", "dest": "backend/server.js" },
     { "src": "/profile(.*)", "dest": "backend/server.js" },
-    { "src": "/uploads/(.*)", "dest": "backend/server.js" }, // For static uploads if served by backend
+    { "src": "/uploads/(.*)", "dest": "backend/server.js" }, 
 
-    // Frontend Routes - This is the fallback for all other paths
+
     { "src": "/(.*)", "dest": "frontend/$1" }
   ],
   "env": {
     "NODE_ENV": "production",
-    "VERCEL_URL": "https://your-vercel-app-name.vercel.app"
-    // Add any other environment variables here
+    "VERCEL_URL": "https://oams-vercel-deployment.vercel.app"
   }
 }
